--- a/APCS-A-2020/.classpath
+++ b/APCS-A-2020/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/eshaankansagara/Downloads/sinbad.jar"/>
+	<classpathentry kind="lib" path="/Users/eshaankansagara/Library/Mobile Documents/com~apple~CloudDocs/eclipse-workspace/sinbad.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
