--- a/APCS-A-2020/.classpath
+++ b/APCS-A-2020/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/eshaankansagara/Library/Mobile Documents/com~apple~CloudDocs/eclipse-workspace/sinbad.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Eshaan/Documents/GitHub/APCS-A-2020/sinbad.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
